bynkc/tests/fixtures/positive/10_multiple_refinements/input.bynk
commons demo {
  type Username = String where MinLength(3) && MaxLength(20) && Matches("[a-z0-9_]+")
}
