bynkc/tests/fixtures/negative/405_match_refined_type_mismatch/input.bynk
commons demo {
  fn f(x: Int) -> Int {
    match x {
      _ where Matches("^[a-z]+$") => 1
      _ => 0
    }
  }
}
